--- a/src/app/t-account/login/login.component.html
+++ b/src/app/t-account/login/login.component.html
@@ -42,8 +42,8 @@
                                     <input name="password" type="password" class="form-control" formControlName="password" id="password"
                                            placeholder="Masukkan Password" minlength="6" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
                                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                        <div *ngIf="f.password.errors.required">password is required</div>
-                                        <div *ngIf="f.password.errors.minlength">password must be at least 6 characters</div>
+                                        <div *ngIf="f.password.errors.required">Password is required</div>
+                                        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
                                     </div>
                                 </div>
                                 <div class="mb-3 form-check">
